# Treta

./: .gitignore  ARTIST_DOWNLOAD_GUIDE.md  CHANGELOG.md  INSTALL.md  INSTALLER_ENHANCEMENTS.md  LICENSE  MANIFEST.in  QUICK_REFERENCE.md  README.md  RELEASE_SUMMARY.md  REMOTE_INSTALLER_SOLUTION.md  TROUBLESHOOTING.md  TROUBLESHOOTING_INSTALLER.md  ZERO_ERRORS_ACHIEVED.md  __init__.py  build.bat  build.sh  fix_zotify.py  health_check.py  install.ps1  install.sh  install_auto.py  install_auto_new.py  install_easy.bat  install_easy.sh  install_remote.ps1  install_remote.sh  pyproject.toml  requirements.txt  setup_global.py  treta.bat  treta.ps1  treta.py
cli/: __init__.py  artist.py  auth.py  download.py  mood.py  queue.py  stats.py
core/: __init__.py  auth_store.py  config.py  logging_config.py  metadata.py  mood_detector.py  smart_queue.py
core/downloader/: __init__.py  apple.py  spotify.py  youtube.py
data/: README.md
db/: __init__.py  manager.py  models.py  schema.sql
tests/: conftest.py  test_cli.py  test_database.py  test_imports.py  test_mood_detector.py
treta/: __init__.py
